--- a/finalVersion.html
+++ b/finalVersion.html
@@ -11,9 +11,9 @@
 <body>
     <p class="rps">Rock Paper Scissors</p>
     <div class="container">
-        <div class="rock" onclick="rockFun();"><img src="/RockPaperScissors/rock.png"></div>
-        <div class="paper" onclick="paperFun();"><img src="/RockPaperScissors/paper.png"></div>
-        <div class="scissors" onclick="scissorFun();"><img src="/RockPaperScissors/scissors.png"></div>
+        <div class="rock" onclick="rockFun();"><img src="rock.png"></div>
+        <div class="paper" onclick="paperFun();"><img src="paper.png"></div>
+        <div class="scissors" onclick="scissorFun();"><img src="scissors.png"></div>
     </div>
 
     <p class="js-result">Result: </p>
